--- a/Fuerza_Bruta_I/Fuerza_Bruta_I.csproj
+++ b/Fuerza_Bruta_I/Fuerza_Bruta_I.csproj
@@ -7,4 +7,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <None Include="bin\Debug\net9.0\passwords.txt" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="bin\Debug\net9.0\" />
+    </ItemGroup>
+
 </Project>
